# ClassificationForAndroid

./: README.md  local.properties
MNNClassification/: README.md  build.gradle  settings.gradle
MNNClassification/app/: CMakeLists.txt  build.gradle
MNNClassification/app/src/main/: AndroidManifest.xml
MNNClassification/app/src/main/assets/: 1.mobilenet_prune.mnn  mobilenet_v2_new_quan.mnn  mobilenet_v2_prune_new_quan.mnn
MNNClassification/app/src/main/cpp/: mnnnetnative.cpp
MNNClassification/app/src/main/java/com/yeyupiaoling/mnnclassification/: AutoFitTextureView.java  CameraActivity.java  MainActivity.java
MNNClassification/app/src/main/java/com/yeyupiaoling/mnnclassification/mnn/: MNNClassification.java  MNNImageProcess.java  MNNPortraitNative.java
MNNClassification/app/src/main/res/drawable/: button.xml
MNNClassification/app/src/main/res/layout/: activity_camera.xml  activity_main.xml
MNNClassification/app/src/main/res/values/: colors.xml  strings.xml
MNNClassification/app/src/test/java/com/yeyupiaoling/mnnclassification/: ExampleUnitTest.java
MNNClassification/gradle/wrapper/: gradle-wrapper.properties
PaddleLiteClassification/: README.md  settings.gradle
PaddleLiteClassification/app/: build.gradle
PaddleLiteClassification/app/src/main/: AndroidManifest.xml
PaddleLiteClassification/gradle/wrapper/: gradle-wrapper.properties
TFLiteClassification/: README.md  settings.gradle
TFLiteClassification/app/: build.gradle
TFLiteClassification/app/src/main/: AndroidManifest.xml
TFLiteClassification/gradle/wrapper/: gradle-wrapper.properties
TNNClassification/: README.md  settings.gradle
TNNClassification/app/: CMakeLists.txt  build.gradle
TNNClassification/app/include/tnn/: version.h
TNNClassification/app/src/androidTest/java/com/yeyupiaoling/tnnclassification/: ExampleInstrumentedTest.java
TNNClassification/app/src/main/: AndroidManifest.xml
TNNClassification/app/src/main/assets/: label_list.txt
TNNClassification/app/src/main/cpp/: imageclassify_jni.cc  imageclassify_jni.h
TNNClassification/app/src/main/java/com/yeyupiaoling/tnnclassification/: AutoFitTextureView.java  CameraActivity.java  MainActivity.java  Utils.java
TNNClassification/app/src/main/java/com/yeyupiaoling/tnnclassification/tnn/: ImageClassifyUtil.java
TNNClassification/app/src/main/res/layout/: activity_camera.xml
TNNClassification/app/src/main/res/values/: strings.xml
TNNClassification/app/src/test/java/com/yeyupiaoling/tnnclassification/: ExampleUnitTest.java
TNNClassification/gradle/wrapper/: gradle-wrapper.properties
app/: build.gradle
app/src/main/assets/: mobilenet_v2_prune_final_quan.mnn  mobilenet_v2_prune_final_quan0.mnn  mobilenet_v2_prune_final_quan_test.mnn
app/src/main/cpp/: mnnportraitnative.cpp
gradle/wrapper/: gradle-wrapper.properties
(+29 files in other folders)
